--- a/angularjs-egghead/package.json
+++ b/angularjs-egghead/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "bower": "^1.3.12"
+    "bower": "^1.3.12",
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
