--- a/checkout/package.json
+++ b/checkout/package.json
@@ -7,5 +7,8 @@
     "test": "test"
   },
   "author": "Matt Olde",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jasmine": "^2.2.1"
+  }
 }
