--- a/checkout/package.json
+++ b/checkout/package.json
@@ -9,6 +9,8 @@
   "author": "Matt Olde",
   "license": "ISC",
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jasmine": "^0.8.2",
     "jasmine": "^2.2.1"
   }
 }
