--- a/checkout/package.json
+++ b/checkout/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jasmine": "^0.8.2",
+    "grunt-contrib-watch": "^0.6.1",
     "jasmine": "^2.2.1"
   }
 }
